--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,9 @@
       "type": "shell",
       "label": "cds watch",
       "command": "cds",
-      "args": ["watch"],
+      "args": [
+        "watch"
+      ],
       "group": {
         "kind": "build",
         "isDefault": true
@@ -18,8 +20,30 @@
       "type": "shell",
       "label": "cds serve",
       "command": "cds",
-      "args": ["serve", "--with-mocks", "--in-memory?"],
+      "args": [
+        "serve",
+        "--with-mocks",
+        "--in-memory?"
+      ],
       "problemMatcher": []
+    },
+    {
+      "label": "cds-deploy-to-hana-cap_demoproject-cap_demoproject-hdi-container",
+      "type": "shell",
+      "command": "cds",
+      "args": [
+        "deploy",
+        "--to",
+        "hana:cap_demoproject-hdi-container",
+        "--no-save"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}"
+      },
+      "isBackground": true,
+      "problemMatcher": [
+        "$cap-hdi-bind-handler"
+      ]
     }
   ]
 }
