--- a/mta.yaml
+++ b/mta.yaml
@@ -1,40 +1,90 @@
-_schema-version: '3.1'
+_schema-version: "3.1"
 ID: cap_demoproject
+description: A simple CAP project.
 version: 1.0.0
-description: "A simple CAP project."
+modules:
+- name: cap_demoproject-srv
+  type: nodejs
+  path: gen/srv
+  requires:
+  - name: cap_demoproject-db
+  provides:
+  - name: srv-api
+    properties:
+      srv-url: ${default-url}
+  parameters:
+    buildpack: nodejs_buildpack
+  build-parameters:
+    builder: npm-ci
+- name: cap_demoproject-db-deployer
+  type: hdb
+  path: gen/db
+  requires:
+  - name: cap_demoproject-db
+  parameters:
+    buildpack: nodejs_buildpack
+- name: cap_demoproject-destination-content
+  type: com.sap.application.content
+  requires:
+  - name: cap_demoproject-destination-service
+    parameters:
+      content-target: true
+  - name: cap_demoproject_html_repo_host
+    parameters:
+      service-key:
+        name: cap_demoproject_html_repo_host-key
+  - name: uaa_cap_demoproject
+    parameters:
+      service-key:
+        name: uaa_cap_demoproject-key
+  parameters:
+    content:
+      instance:
+        destinations:
+        - Name: capdemo_approuter_cap_demoproject_html_repo_host
+          ServiceInstanceName: cap_demoproject-html5-app-host-service
+          ServiceKeyName: cap_demoproject_html_repo_host-key
+          sap.cloud.service: capdemo_approuter
+        - Authentication: OAuth2UserTokenExchange
+          Name: capdemo_approuter_uaa_cap_demoproject
+          ServiceInstanceName: cap_demoproject-xsuaa-service
+          ServiceKeyName: uaa_cap_demoproject-key
+          sap.cloud.service: capdemo_approuter
+        existing_destinations_policy: ignore
+  build-parameters:
+    no-source: true
+resources:
+- name: cap_demoproject-db
+  type: com.sap.xs.hdi-container
+  parameters:
+    service: hana
+    service-plan: hdi-shared
+- name: cap_demoproject-destination-service
+  type: org.cloudfoundry.managed-service
+  parameters:
+    config:
+      HTML5Runtime_enabled: true
+      version: 1.0.0
+    service: destination
+    service-name: cap_demoproject-destination-service
+    service-plan: lite
+- name: cap_demoproject_html_repo_host
+  type: org.cloudfoundry.managed-service
+  parameters:
+    service: html5-apps-repo
+    service-name: cap_demoproject-html5-app-host-service
+    service-plan: app-host
+- name: uaa_cap_demoproject
+  type: org.cloudfoundry.managed-service
+  parameters:
+    path: ./xs-security.json
+    service: xsuaa
+    service-name: cap_demoproject-xsuaa-service
+    service-plan: application
 parameters:
   enable-parallel-deployments: true
 build-parameters:
   before-all:
-    - builder: custom
-      commands:
-        - npx -p @sap/cds-dk cds build --production
-modules:
-  - name: cap_demoproject-srv
-    type: nodejs
-    path: gen/srv
-    parameters:
-      buildpack: nodejs_buildpack
-    build-parameters:
-      builder: npm-ci
-    provides:
-      - name: srv-api # required by consumers of CAP services (e.g. approuter)
-        properties:
-          srv-url: ${default-url}
-    requires:
-      - name: cap_demoproject-db
-
-  - name: cap_demoproject-db-deployer
-    type: hdb
-    path: gen/db
-    parameters:
-      buildpack: nodejs_buildpack
-    requires:
-      - name: cap_demoproject-db
-
-resources:
-  - name: cap_demoproject-db
-    type: com.sap.xs.hdi-container
-    parameters:
-      service: hana
-      service-plan: hdi-shared
+  - builder: custom
+    commands:
+    - npx -p @sap/cds-dk cds build --production
