--- a/mta.yaml
+++ b/mta.yaml
@@ -53,6 +53,30 @@ modules:
         existing_destinations_policy: ignore
   build-parameters:
     no-source: true
+- name: cap_demoproject-app-content
+  type: com.sap.application.content
+  path: .
+  requires:
+  - name: cap_demoproject_html_repo_host
+    parameters:
+      content-target: true
+  build-parameters:
+    build-result: resources
+    requires:
+    - artifacts:
+      - capdemocapdemoui.zip
+      name: capdemocapdemoui
+      target-path: resources/
+- name: capdemocapdemoui
+  type: html5
+  path: app/capdemoui
+  build-parameters:
+    build-result: dist
+    builder: custom
+    commands:
+    - npm install
+    - npm run build:cf
+    supported-platforms: []
 resources:
 - name: cap_demoproject-db
   type: com.sap.xs.hdi-container
@@ -64,6 +88,15 @@ resources:
   parameters:
     config:
       HTML5Runtime_enabled: true
+      init_data:
+        instance:
+          destinations:
+          - Authentication: NoAuthentication
+            Name: ui5
+            ProxyType: Internet
+            Type: HTTP
+            URL: https://ui5.sap.com
+          existing_destinations_policy: update
       version: 1.0.0
     service: destination
     service-name: cap_demoproject-destination-service
@@ -82,6 +115,7 @@ resources:
     service-name: cap_demoproject-xsuaa-service
     service-plan: application
 parameters:
+  deploy_mode: html5-repo
   enable-parallel-deployments: true
 build-parameters:
   before-all:
