--- a/package.json
+++ b/package.json
@@ -1,30 +1,36 @@
 {
-  "name": "cap_demoproject",
-  "version": "1.0.0",
-  "description": "A simple CAP project.",
-  "repository": "<Add your repository here>",
-  "license": "UNLICENSED",
-  "private": true,
-  "dependencies": {
-    "@sap/cds": "^6",
-    "@sap/cds-odata-v2-adapter-proxy": "^1.9.21",
-    "@sap/hana-client": "^2.16.26",
-    "express": "^4",
-    "hdb": "^0.19.0"
-  },
-  "devDependencies": {
-    "@sap/hdi-deploy": "4.6.1",
-    "sqlite3": "^5"
-  },
-  "scripts": {
-    "start": "cds-serve"
-  },
-  "cds": {
-    "requires": {
-      "db": "hana-cloud"
+    "name": "cap_demoproject",
+    "version": "1.0.0",
+    "description": "A simple CAP project.",
+    "repository": "<Add your repository here>",
+    "license": "UNLICENSED",
+    "private": true,
+    "dependencies": {
+        "@sap/cds": "^6",
+        "@sap/cds-odata-v2-adapter-proxy": "^1.9.21",
+        "@sap/hana-client": "^2.16.26",
+        "express": "^4",
+        "hdb": "^0.19.0"
     },
-    "hana": {
-      "deploy-format": "hdbtable"
+    "devDependencies": {
+        "@sap/hdi-deploy": "4.6.1",
+        "@sap/ux-specification": "^1.108.6",
+        "sqlite3": "^5",
+        "rimraf": "^3.0.2"
+    },
+    "scripts": {
+        "start": "cds-serve",
+        "watch-capdemoui": "cds watch --open capdemoui/webapp/index.html?sap-ui-xx-viewCache=false",
+        "undeploy": "cf undeploy cap_demoproject --delete-services --delete-service-keys --delete-service-brokers",
+        "build": "rimraf resources mta_archives && mbt build --mtar archive",
+        "deploy": "cf deploy mta_archives/archive.mtar --retries 1"
+    },
+    "cds": {
+        "requires": {
+            "db": "hana-cloud"
+        },
+        "hana": {
+            "deploy-format": "hdbtable"
+        }
     }
-  }
 }
