--- a/app/capdemoui/xs-app.json
+++ b/app/capdemoui/xs-app.json
@@ -3,6 +3,12 @@
   "authenticationMethod": "route",
   "routes": [
     {
+      "source": "^/catalog/(.*)$",
+      "target": "/catalog/$1",
+      "destination": "capdemoproject-srv-api",
+      "authenticationType": "none"
+    },
+    {
       "source": "^/resources/(.*)$",
       "target": "/resources/$1",
       "authenticationType": "none",
