--- a/app/capdemoui/xs-app.json
+++ b/app/capdemoui/xs-app.json
@@ -3,10 +3,10 @@
   "authenticationMethod": "route",
   "routes": [
     {
-      "source": "^/catalog/(.*)$",
-      "target": "/catalog/$1",
+      "source": "^/v2/catalog/(.*)$",
+      "target": "/v2/catalog/$1",
       "destination": "capdemoproject-srv-api",
-      "authenticationType": "none"
+      "authenticationType": "xsuaa"
     },
     {
       "source": "^/resources/(.*)$",
