--- a/package.json
+++ b/package.json
@@ -30,17 +30,19 @@
     "requires": {
       "db": "hana-cloud",
       "auth": {
-        "kind": "basic",
-        "users": {
-          "booksmanager@sap.com": {
-            "roles": [
-              "BookManager"
-            ]
-          },
-          "booksviewer@sap.com": {
-            "roles": [
-              "BookViewer"
-            ]
+        "[development]":{
+          "kind": "basic",
+          "users": {
+            "booksmanager@sap.com": {
+              "roles": [
+                "BookManager"
+              ]
+            },
+            "booksviewer@sap.com": {
+              "roles": [
+                "BookViewer"
+              ]
+            }
           }
         }
       }
