--- a/package.json
+++ b/package.json
@@ -51,17 +51,15 @@
       "ECPersonalInformation": {
         "kind": "odata-v2",
         "model": "srv/external/ECPersonalInformation",
-        "[development]": {
-          "credentials": {
-            "requestTimeout": 30000,
-            "url": "https://sandbox.api.sap.com/successfactors/odata/v2",
-            "authentication": "NoAuthentication"
-          }
-        },
-        "[production]": {
-          "credentials": {
-            "destination": "SFExternalService"
-          }
+        "credentials": {
+         "url":"https://sandbox.api.sap.com/successfactors/odata/v2"
+        }
+      },
+      "Northwind": {
+        "kind": "odata",
+        "model": "srv/external/Northwind",
+        "credentials":{
+        "destination" :"NorthWind"
         }
       }
     },
