--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
         "kind": "odata",
         "model": "srv/external/Northwind",
         "credentials": {
-          "url": "https://services.odata.org/V3/Northwind/Northwind.svc/"
+          "destination":"NorthWind"
         }
       }
     },
