--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@sap/cds": "^6",
     "@sap/cds-odata-v2-adapter-proxy": "^1.9.21",
     "@sap/hana-client": "^2.16.26",
+    "cfenv": "^1.2.4",
     "express": "^4",
     "hdb": "^0.19.0",
     "json-2-csv": "^4.0.0"
